seer-core/tests/snapshots/format_snapshots__markdown_subdomain_baseline_diff_missing_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 306
expression: markdown().format_subdomain_baseline_diff(&fixture_subdomain_baseline_diff_missing())
---
## Subdomain diff: example.com

_No stored baseline to compare against (first run)._
