seer-core/tests/snapshots/format_snapshots__markdown_subdomain_baseline_diff_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 589
expression: "markdown ().format_subdomain_baseline_diff\n(& fixture_subdomain_baseline_diff())"
---
## Subdomain diff: example.com

- **Baseline recorded**: 2026-06-01 12:00 UTC

2 added, 1 removed, 12 unchanged.

### Added

- `api.example.com`
- `staging.example.com`

### Removed (informational — often CT source flakiness)

- `old.example.com`
