seer-core/tests/snapshots/format_snapshots__markdown_subdomain_classification_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 456
expression: "markdown ().format_subdomain_classification\n(& fixture_subdomain_classification())"
---
## Subdomains: example.com

> ⚠️ Wildcard DNS detected — some "live" verdicts may be zone wildcards.

3 names — 1 live, 1 takeover-risk.

> ⚠️ 3 more names exceeded the classification cap and were not resolved.

| Name | Status | CNAME | Takeover risk |
| --- | --- | --- | --- |
| www.example.com | live | — | — |
| docs.example.com | dead | example.github.io. | GitHub Pages |
| random.example.com | wildcard | — | — |
