seer-core/tests/snapshots/format_snapshots__markdown_subdomains_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
expression: markdown ().format_subdomains (& fixture_subdomains())
---
## Subdomains: example.com

- **Source**: crt.sh
- **Count**: 2

- `api.example.com`
- `www.example.com`
