seer-core/tests/snapshots/format_snapshots__markdown_takeover_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 1557
expression: markdown ().format_takeover (& fixture_takeover())
---
## Takeover scan: example.com

12 host(s) checked — **1 vulnerable**, 1 potential

_3 more host(s) exceeded the scan cap and were not examined._

| Host | Verdict | Provider | CNAME | Evidence | Note |
| --- | --- | --- | --- | --- | --- |
| docs.example.com | **VULNERABLE** | GitHub Pages | example.github.io | There isn't a GitHub Pages site here. | — |
| shop.example.com | potential | Shopify | shops.myshopify.com | — | HTTP probe failed: connection refused |

### Advisories

- 3 hosts exceeded the scan cap
