seer-core/tests/snapshots/format_snapshots__markdown_whois_contacts_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 780
expression: markdown ().format_whois (& fixture_whois_with_contacts())
---
## WHOIS: example.com

- **Registrar**: Mock Registrar Inc.
- **Registrant**: Jane Registrant
- **Organization**: Example Holdings LLC
- **Created**: `2010-03-15`
- **Expires**: `2099-03-15` (expires in [N] days)
- **Updated**: `2024-02-01`
- **Nameservers**: `ns1.example.com`, `ns2.example.com`
- **Status**: `clientTransferProhibited`
- **DNSSEC**: signedDelegation
- **WHOIS Server**: `whois.verisign-grs.com`

### Registrant Contact

- **Email**: `owner@example.com`
- **Phone**: +1.5555550100
- **Address**: 1 Main St, Springfield
- **Country**: US

### Admin Contact

- **Name**: Alex Admin
- **Organization**: Example Holdings LLC
- **Email**: `admin@example.com`
- **Phone**: +1.5555550101

### Tech Contact

- **Name**: Terry Tech
- **Email**: `tech@example.com`
