seer-core/tests/snapshots/format_snapshots__markdown_whois_snapshot.snap
---
source: seer-core/tests/format_snapshots.rs
assertion_line: 250
expression: markdown ().format_whois (& fixture_whois())
---
## WHOIS: example.com

- **Registrar**: Mock Registrar Inc.
- **Organization**: Example Holdings LLC
- **Created**: `2010-03-15`
- **Expires**: `2099-03-15` (expires in [N] days)
- **Updated**: `2024-02-01`
- **Nameservers**: `ns1.example.com`, `ns2.example.com`
- **Status**: `clientTransferProhibited`
- **DNSSEC**: signedDelegation
- **WHOIS Server**: `whois.verisign-grs.com`

### Registrant Contact

- **Country**: US
